[수정2] 검색버튼 수정

--- a/travel/modify0_/travel.html
+++ b/travel/modify0_/travel.html
@@ -6,7 +6,7 @@
     <title>K-Local Vibe Trip - 한국 로컬 문화 여행</title>
     <link rel="stylesheet" href="travel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head> 
+</head>
 <body>
 
     <header class="main-header">
@@ -19,15 +19,14 @@
 
     <main class="container">
         <section class="controls">
-            <div class="search-box">
+            <div class="search-wrapper">
                 <input type="text" id="searchInput" placeholder="여행지, 지역, 키워드를 검색하세요 (예: 국밥, 홍대, 노래방)">
-
-                <!-- <button id="searchButton" class="search-btn"><i class="fas fa-search"></i></button> -->
-
+                <button id="searchButton" class="search-btn"><i class="fas fa-search"></i></button>
             </div>
+            <br>
             
             <div class="tag-filters" id="tagFilters">
-                </div>
+            </div>
         </section>
 
         <br><br><br>
