상세정보 모달 추가

--- a/travel/modify0_/travel.html
+++ b/travel/modify0_/travel.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="travel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body> 
+<body>
 
     <header class="main-header">
         <br><br><br>
@@ -38,6 +38,18 @@
     <footer class="main-footer">
         <p>&copy; 2025 K-Local Vibe Trip. All rights reserved.</p>
     </footer>
+
+
+    <div id="detailsModal" class="modal-overlay">
+        <div class="modal-container">
+            <button class="modal-close"><i class="fas fa-times"></i></button>
+            
+            <div class="modal-content-area" id="modalContent">
+                </div>
+        </div>
+    </div>
+
+    
 
     <script src="travel.js"></script>
 </body>
