--- a/html/local.html
+++ b/html/local.html
@@ -25,7 +25,8 @@
                 <a href="../index.html">Home</a>
                 <a href="local.html" class="active">Local</a>
                 <a href="k-lingo.html">K-Lingo</a>
-                <a href="learn.html">Learn</a>
+                <a href="media.html">Media</a>
+                <a href="minigame.html">Mini Games</a>
                 <a href="mypage.html">My Page</a>
                 <a href="login.html" class="mobile-only-link">Log In</a>
                 <a href="signup.html" class="mobile-only-link">Sign Up</a>
@@ -48,49 +49,14 @@
 
     <!-- ================= Main ================= -->
     <main class="local-container">
+
         <div class="local-content-wrapper">
+
             <!-- ===== Main Content ===== -->
             <div class="local-main-content">
+
                 <!-- Controls -->
                 <section class="local-controls">
-                    <section class="hot-places-section">
-                        <div class="local-container">
-                            <h2 class="hot-places-title">The place to be</h2>
-                            <div class="hot-places-grid">
-                                <div class="hot-place-card">
-                                    <div class="hot-place-img-wrapper">
-                                        <img src="../images/travel/hotplace/seoul.jpg" alt="서울특별시 성동구">
-                                    </div>
-                                    <p>서울특별시 성동구</p>
-                                </div>
-                                <div class="hot-place-card">
-                                    <div class="hot-place-img-wrapper">
-                                        <img src="../images/travel/hotplace/busan.jpg" alt="부산광역시 해운대구">
-                                    </div>
-                                    <p>부산광역시 해운대구</p>
-                                </div>
-                                <div class="hot-place-card">
-                                    <div class="hot-place-img-wrapper">
-                                        <img src="../images/travel/hotplace/jeju.jpg" alt="제주시">
-                                    </div>
-                                    <p>제주시</p>
-                                </div>
-                                <div class="hot-place-card">
-                                    <div class="hot-place-img-wrapper">
-                                        <img src="../images/travel/hotplace/gyeongju.jpg" alt="경주">
-                                    </div>
-                                    <p>경주</p>
-                                </div>
-                                <div class="hot-place-card">
-                                    <div class="hot-place-img-wrapper">
-                                        <img src="../images/travel/hotplace/gangneung.jpg" alt="강릉시 주문진">
-                                    </div>
-                                    <p>강릉시 주문진</p>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
                     <div class="local-search-wrapper">
                         <div class="local-category-dropdown-container">
                             <select id="localCategoryDropdown" class="local-category-dropdown">
@@ -164,9 +130,13 @@
             <img src="../images/language.svg" class="nav-img">
             <span class="tooltip">K-Lingo</span>
         </a>
-        <a href="learn.html" class="nav-icon-link">
-            <img src="../images/learn.svg" alt="Learn" class="nav-img">
-            <span class="tooltip">Learn</span>
+        <a href="media.html" class="nav-icon-link active">
+            <img src="../images/media.svg" alt="Media" class="nav-img">
+            <span class="tooltip">Media</span>
+        </a>
+        <a href="minigame.html" class="nav-icon-link">
+            <img src="../images/minigame.svg" class="nav-img">
+            <span class="tooltip">Game</span>
         </a>
         <a href="mypage.html" class="nav-icon-link">
             <img src="../images/mypage.svg" class="nav-img">
