상단네비수정

--- a/html/k-lingo.html
+++ b/html/k-lingo.html
@@ -24,8 +24,7 @@
                 <a href="../index.html">Home</a>
                 <a href="local.html">Local</a>
                 <a href="k-lingo.html" class="active">K-Lingo</a>
-                <a href="media.html">Media</a>
-                <a href="minigame.html">Mini Games</a>
+                <a href="learn.html">Learn</a>
                 <a href="mypage.html">My Page</a>
                 <a href="login.html" class="mobile-only-link">Log In</a>
                 <a href="signup.html" class="mobile-only-link">Sign Up</a>
@@ -77,8 +76,24 @@
         </div>
     </main>
 
-    <footer class="local-main-footer">
-        <p>&copy; 2025 K-Local Vibe Trip. All rights reserved.</p>
+    <!-- ================= FOOTER ================= -->
+    <footer class="site-footer">
+        <div class="footer-inner">
+
+            <div class="footer-brand">
+                <span class="footer-logo">K</span>
+                <p class="footer-tagline">
+                    Discover Korea. <br>
+                    Learn the language, culture, and local life.
+                </p>
+            </div>
+
+            <div class="footer-meta">
+                <p>© 2025 Koreanize</p>
+                <p>Built for global explorers of Korea</p>
+            </div>
+
+        </div>
     </footer>
 
     <!-- Floating Bottom Nav -->
@@ -95,13 +110,9 @@
             <img src="../images/language.svg" alt="K-Lingo" class="nav-img">
             <span class="tooltip">K-Lingo</span>
         </a>
-        <a href="media.html" class="nav-icon-link">
-            <img src="../images/media.svg" alt="Media" class="nav-img">
-            <span class="tooltip">Media</span>
-        </a>
-        <a href="minigame.html" class="nav-icon-link">
-            <img src="../images/minigame.svg" alt="Game" class="nav-img">
-            <span class="tooltip">Game</span>
+        <a href="learn.html" class="nav-icon-link">
+            <img src="../images/learn.svg" alt="Learn" class="nav-img">
+            <span class="tooltip">Learn</span>
         </a>
         <a href="mypage.html" class="nav-icon-link">
             <img src="../images/mypage.svg" alt="MyPage" class="nav-img">
