--- a/html/mypage.html
+++ b/html/mypage.html
@@ -23,8 +23,7 @@
                 <a href="../index.html">Home</a>
                 <a href="local.html">Local</a>
                 <a href="k-lingo.html">K-Lingo</a>
-                <a href="media.html">Media</a>
-                <a href="minigame.html">Mini Games</a>
+                <a href="learn.html">Learn</a>
                 <a href="mypage.html" class="active">My Page</a>
                 <!-- Mobile Only Links -->
                 <a href="login.html" class="mobile-only-link">Log In</a>
@@ -59,7 +58,7 @@
 
 
         <section class="section-box">
-            <h3>💘 Bookmarked Spots (<span id="bookmarkCount"> 0 </span>)</h3>
+            <h3>Bookmarked Spots (<span id="bookmarkCount"> 0 </span>)</h3>
             <div class="bookmark-list" id="bookmarkList">
                 <!-- Injected via JS -->
                 <div class="empty-msg">No bookmarks yet.</div>
@@ -79,8 +78,24 @@
     </main>
 
 
-    <footer class="local-main-footer">
-        <p>&copy; 2025 K-Local Vibe Trip. All rights reserved.</p>
+    <!-- ================= FOOTER ================= -->
+    <footer class="site-footer">
+        <div class="footer-inner">
+
+            <div class="footer-brand">
+                <span class="footer-logo">K</span>
+                <p class="footer-tagline">
+                    Discover Korea. <br>
+                    Learn the language, culture, and local life.
+                </p>
+            </div>
+
+            <div class="footer-meta">
+                <p>© 2025 Koreanize</p>
+                <p>Built for global explorers of Korea</p>
+            </div>
+
+        </div>
     </footer>
 
     <!-- Bottom Nav -->
@@ -97,13 +112,9 @@
             <img src="../images/language.svg" alt="K-Lingo" class="nav-img">
             <span class="tooltip">K-Lingo</span>
         </a>
-        <a href="media.html" class="nav-icon-link">
-            <img src="../images/media.svg" alt="Media" class="nav-img">
-            <span class="tooltip">Media</span>
-        </a>
-        <a href="minigame.html" class="nav-icon-link">
-            <img src="../images/minigame.svg" alt="Game" class="nav-img">
-            <span class="tooltip">Game</span>
+        <a href="learn.html" class="nav-icon-link">
+            <img src="../images/learn.svg" alt="Learn" class="nav-img">
+            <span class="tooltip">Learn</span>
         </a>
         <a href="mypage.html" class="nav-icon-link">
             <img src="../images/mypage.svg" alt="MyPage" class="nav-img">
